# nortexbotmaker

./: .gitignore  README.md  TODO.md  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  globals.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs  menu_handlers.rs  structures.rs
src-ui/components/: ContextMenu.tsx  Line.tsx  Node.tsx
src-ui/hooks/: useKeybind.tsx
src-ui/pages/: _app.tsx  index.tsx
src-ui/styles/: ContextMenu.module.scss  globals.scss
src/components/: BlueprintContainer.tsx  ContextMenu.tsx  Layout.tsx  Node.tsx  RightClickContextMenuHandler.tsx  Sidebar.tsx
src/const/: contextMenu.ts
src/handlers/: createNode.ts
src/hooks/: useEditor.tsx  useKeybind.tsx  useOnClickOutside.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/providers/: BlueprintProvider.tsx  ProjectProvider.tsx  Providers.tsx  ViewProvider.tsx
src/styles/: Blueprint.module.scss  ContextMenu.module.scss  globals.scss
src/util/: theme.ts
src/views/: CommandsView.tsx  EventsView.tsx  MainView.tsx  SettingsView.tsx
